[gd_scene load_steps=31 format=3 uid="uid://bhccfj1wcn3rw"]

[ext_resource type="Texture2D" uid="uid://cnjopmwowfci2" path="res://enemy/sprites/zombie_back_x60.png" id="1_qebuo"]
[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_s4jig"]
[ext_resource type="Texture2D" uid="uid://jdpcvxjlyaum" path="res://enemy/sprites/zombie_front_x60.png" id="2_3lejl"]
[ext_resource type="Texture2D" uid="uid://5lp52hffoh6q" path="res://enemy/sprites/zombie_left_x60.png" id="4_3shu1"]
[ext_resource type="Texture2D" uid="uid://5rksogy7n2ie" path="res://enemy/sprites/zombie_right_x60.png" id="5_lb5qn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_blmhk"]
atlas = ExtResource("1_qebuo")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fq6i"]
atlas = ExtResource("2_3lejl")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp5ep"]
atlas = ExtResource("4_3shu1")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4vfy"]
atlas = ExtResource("5_lb5qn")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pim6m"]
atlas = ExtResource("1_qebuo")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwa0p"]
atlas = ExtResource("1_qebuo")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4mtc"]
atlas = ExtResource("1_qebuo")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hyr6"]
atlas = ExtResource("1_qebuo")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp4np"]
atlas = ExtResource("2_3lejl")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cknhm"]
atlas = ExtResource("2_3lejl")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2225"]
atlas = ExtResource("2_3lejl")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_y06yj"]
atlas = ExtResource("2_3lejl")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8pg"]
atlas = ExtResource("4_3shu1")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcj8e"]
atlas = ExtResource("4_3shu1")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly6su"]
atlas = ExtResource("4_3shu1")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy44b"]
atlas = ExtResource("4_3shu1")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvs6a"]
atlas = ExtResource("5_lb5qn")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ucoy"]
atlas = ExtResource("5_lb5qn")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqfc0"]
atlas = ExtResource("5_lb5qn")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_kewk5"]
atlas = ExtResource("5_lb5qn")
region = Rect2(180, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_dex8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blmhk")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fq6i")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp5ep")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4vfy")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pim6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwa0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4mtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hyr6")
}],
"loop": true,
"name": &"walk_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp4np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cknhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2225")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y06yj")
}],
"loop": true,
"name": &"walk_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcj8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy44b")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvs6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ucoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqfc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kewk5")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7dbp0"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_2wx4l"]
radius = 250.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atgu3"]
size = Vector2(26, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_5cbgh"]
radius = 17.0

[node name="enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_s4jig")

[node name="enemy_anim_2d" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dex8x")
animation = &"walk_right"
offset = Vector2(0, -20)

[node name="enemy_coll_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7dbp0")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_2wx4l")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_atgu3")

[node name="attack_area" type="Area2D" parent="."]

[node name="enemy_attack_area_coll" type="CollisionShape2D" parent="attack_area"]
position = Vector2(-7, 0)
shape = SubResource("CircleShape2D_5cbgh")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="continue_chasing" type="Timer" parent="."]
wait_time = 2.0

[node name="walking" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="continue_chasing" to="." method="_on_continue_chasing_timeout"]
[connection signal="timeout" from="walking" to="." method="_on_walking_timeout"]
